# nn_rust

./: Cargo.toml  data.txt  data3.txt
src/: NeuralNetwork.rs  data_set.rs  lib.rs  main.rs  matrix.rs  neural_network.rs
src/ec/: Contestant.rs  EvolutionaryComputation.rs  contestant.rs  evolutionary_computation.rs  mod.rs
src/nn/: data_set.rs  matrix.rs  mod.rs  neural_network.rs
