[package]
name = "nn_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
nalgebra = "0.31.1"
matrixmultiply = "0.3.2"
rblas = "0.0.13"
graplot = "0.1.21"
textplots = "0.8.0"

[profile.release]
debug = false
optimization = true

[profile.dev]
opt-level = 3
